NitrOS-9 V3.2.9:

----------------------------------------------------------
2013/01/27 David Ladd
M ChangeLog
M level1/coco1/bootfiles/makefile
M level1/coco1/modules/makefile

Updated level1/coco1/modules/makefile so that boot_dw_coco1
and dwio_coco1.sb get created.

Updated level1/coco1/bootfiles/makefile added detection of
PORT status so if coco1 is detected then dwio_coco1.sb and
boot_dw_coco1 are used in place of dwio.sb and boot_dw.

----------------------------------------------------------
2013/01/26 David Ladd
M ChangeLog
M level1/coco1/bootfiles/makefile
M level1/coco1/makefile
M level1/coco1/modules/makefile

Updated level1/coco1/bootfiles/makefile to create becker &
arduino boot and kernel files.

Updated level1/coco1/makefile to create becker & arduino
boot disks for use with drivewire server.

Updated level1/coco1/modules/makefile to create becker &
arduino dwio sb files.

----------------------------------------------------------
2013/01/25 David Ladd
M 3rdparty/packages/sierra/kingsquest2/makefile
M ChangeLog
M level2/coco3/makefile

Updated "3rdparty/packages/sierra/kingsquest2/makefile" to
fix issue with not using the correct dwio.sb and
dwio_becker.sb.

In "level2/coco3/makefile" updated from
"LDSKBECKER      = $(DISTRONAME)_80d_becker.dsk" to 
"LDSKBECKER      = $(DISTRONAME)_becker.dsk"
since the becker boot disks are for use in the drivewire
server and those are not double sided disks.

----------------------------------------------------------
2013/01/23 David Ladd
M 3rdparty/utils/view/makefile
M ChangeLog
M level1/modules/dwread.asm
M level1/modules/dwwrite.asm

Corrected a ENDC that was in the incorrect location in
dwread.asm and dwwrite.asm also moved the 6309 native code
into the H6309 section and changed the IFEQ H6309 to IFNE H6309
so the code would get correctly loaded.  Moved the 57600 6809
code to the default location as it was in the old dwread.asm
and dwwrite.asm before these files got overwritten by the